# SMBS

./: .gitignore  README.md  pyproject.toml
scripts/: scan.py
scripts/encode/: encode.py  encoders.py  run.slurm  utils.py
scripts/swuggy/: README.md  __init__.py  evaluate.py  plots.py  prepare_swuggy.py  run.slurm  utils.py
scripts/train/: datasets.py  grid.py  grid.slurm  models.py  run.slurm  train.py  utils.py
slurm/: encode.slurm  evaluate.slurm  grid.slurm  scan.slurm  test.slurm  train.slurm  vad_pyannote.slurm  vad_ten.slurm
src/smbs/: __init__.py  cli.py  config.py  scan.py
src/smbs/encode/: __init__.py  base.py  hubert.py  registry.py  run.py  spidr.py  textless.py
src/smbs/evaluate/: __init__.py  metrics.py  plots.py  swuggy.py
src/smbs/train/: __init__.py  dataset.py  grid.py  models.py  run.py  utils.py
src/smbs/utils/: audio.py  manifest.py
src/smbs/vad/: __init__.py  pyannote.py  tenvad.py
tests/: test_gpu.py
